--- a/Portfolio 0.5.2/index.html
+++ b/Portfolio 0.5.2/index.html
@@ -488,7 +488,7 @@
                 <i><img alt="" class="iconos" src="img/home.png"> </i>
               </li>
               <li>
-               <i><img alt="" class="iconos" src="img/perfil.png"></i>
+               <i><img alt="" class="iconos" src="img/Perfil.png"></i>
               </li>
               <li>
                 <i><img alt="" class="iconos" src="img/porfolio.png"></i>
